--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ a { text-decoration: none; color: #000; }
 
 <div id="num-apt-mapped" class="site-note" style="text-align: center;">
 	<span style="font-size:10pt;"><b>
-		2024, Jun 4th	</b></span>
+		2024, Jun 12th	</b></span>
 </div>
 
 <div class="mapp-filter display-none">
@@ -5854,6 +5854,204 @@ a { text-decoration: none; color: #000; }
 <td class="bldg">16</td>
 <td class="unit">146 147 148 246 247 248</td>
 <td class="coord">36.82023776743775, -119.75507541048182</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
+	Chestnut Court Apartments
+	<span class="mapp-city">-
+	Fresno, CA 93720
+	</span>
+</span>
+
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>N Chestnut Ave</u>.</li></ul>
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">8755 N Chestnut Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg"></td>
+<td class="unit">office pool</td>
+<td class="coord">36.86372633612702, -119.73921389077621</td>
+</tr>
+
+<tr>
+<td class="bldg">A</td>
+<td class="unit">147 148 247 248</td>
+<td class="coord">36.86440488276077, -119.74097191245357</td>
+</tr>
+
+<tr>
+<td class="bldg">A</td>
+<td class="unit">149 150 249 250</td>
+<td class="coord">36.86440523308387, -119.74063331814607</td>
+</tr>
+
+<tr>
+<td class="bldg">B</td>
+<td class="unit">151 152 251 252</td>
+<td class="coord">36.864404984804935, -119.7405792345619</td>
+</tr>
+
+<tr>
+<td class="bldg">B</td>
+<td class="unit">153 154 253 254</td>
+<td class="coord">36.86440561634121, -119.74024042953289</td>
+</tr>
+
+<tr>
+<td class="bldg">C</td>
+<td class="unit">143 144 243 244</td>
+<td class="coord">36.86393662481537, -119.74040885906479</td>
+</tr>
+
+<tr>
+<td class="bldg">C</td>
+<td class="unit">145 146 245 246</td>
+<td class="coord">36.863928388221616, -119.74075717873608</td>
+</tr>
+
+<tr>
+<td class="bldg">D</td>
+<td class="unit">139 140 240</td>
+<td class="coord">36.863951789977335, -119.74015819459687</td>
+</tr>
+
+<tr>
+<td class="bldg">D</td>
+<td class="unit">141 142 241</td>
+<td class="coord">36.86395003186254, -119.74024244086581</td>
+</tr>
+
+<tr>
+<td class="bldg">E</td>
+<td class="unit">137 138 237 238</td>
+<td class="coord">36.86388153631105, -119.73999082933081</td>
+</tr>
+
+<tr>
+<td class="bldg">F</td>
+<td class="unit">133 134 233 234</td>
+<td class="coord">36.86387877548184, -119.73946694853149</td>
+</tr>
+
+<tr>
+<td class="bldg">F</td>
+<td class="unit">135 136 235 236</td>
+<td class="coord">36.863876566973296, -119.73980875229908</td>
+</tr>
+
+<tr>
+<td class="bldg">G</td>
+<td class="unit">119 120 219 220</td>
+<td class="coord">36.86364602729729, -119.74075080620868</td>
+</tr>
+
+<tr>
+<td class="bldg">G</td>
+<td class="unit">121 122 221 222</td>
+<td class="coord">36.86364320169801, -119.74041210226797</td>
+</tr>
+
+<tr>
+<td class="bldg">H</td>
+<td class="unit">123 124 224</td>
+<td class="coord">36.86362898695473, -119.74023827127755</td>
+</tr>
+
+<tr>
+<td class="bldg">H</td>
+<td class="unit">125 126 225</td>
+<td class="coord">36.863627252071105, -119.7401579926665</td>
+</tr>
+
+<tr>
+<td class="bldg">I</td>
+<td class="unit">127 128 227 228</td>
+<td class="coord">36.86364147308843, -119.73998813727027</td>
+</tr>
+
+<tr>
+<td class="bldg">J</td>
+<td class="unit">129 130 229 230</td>
+<td class="coord">36.863644091404026, -119.73980114654248</td>
+</tr>
+
+<tr>
+<td class="bldg">J</td>
+<td class="unit">131 132 231 232</td>
+<td class="coord">36.86364992152701, -119.73946501543058</td>
+</tr>
+
+<tr>
+<td class="bldg">K</td>
+<td class="unit">115 116 215 216</td>
+<td class="coord">36.86318417354089, -119.74071563427033</td>
+</tr>
+
+<tr>
+<td class="bldg">K</td>
+<td class="unit">117 118 217 218</td>
+<td class="coord">36.86318951221436, -119.74097208226438</td>
+</tr>
+
+<tr>
+<td class="bldg">L</td>
+<td class="unit">111 112 211 212</td>
+<td class="coord">36.86318772172861, -119.74032586289496</td>
+</tr>
+
+<tr>
+<td class="bldg">L</td>
+<td class="unit">113 114 213 214</td>
+<td class="coord">36.86316593782995, -119.74068602675442</td>
+</tr>
+
+<tr>
+<td class="bldg">M</td>
+<td class="unit">107 108 208</td>
+<td class="coord">36.86318933315075, -119.7400710340862</td>
+</tr>
+
+<tr>
+<td class="bldg">M</td>
+<td class="unit">109 110 209</td>
+<td class="coord">36.863188069505085, -119.74015655167402</td>
+</tr>
+
+<tr>
+<td class="bldg">N</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.86318970485174, -119.73956040136628</td>
+</tr>
+
+<tr>
+<td class="bldg">N</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.86318638795389, -119.73989675738434</td>
+</tr>
+
+<tr>
+<td class="bldg">O</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.8631955166009, -119.73921591000736</td>
 </tr>
 
 </tbody>
