--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ a { text-decoration: none; color: #000; }
 
 <div id="num-apt-mapped" class="site-note" style="text-align: center;">
 	<span style="font-size:10pt;"><b>
-		2024, Jun 24th	</b></span>
+		2024, Dec 25th	</b></span>
 </div>
 
 <div class="mapp-filter display-none">
@@ -7305,6 +7305,353 @@ a { text-decoration: none; color: #000; }
 <tr>
 <td class="unit">191 192 193 194</td>
 <td class="coord">36.810470578533334, -119.69346567920574</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+</ul>
+</div><div class="mapp-content">
+
+<span class="mapp-title">
+	Courtyard at Central Park Apartments
+	<span class="mapp-city">-
+	Fresno, CA 93722
+	</span>
+</span>
+
+<ul class="mapp-note"><li class="mapp-entrance">the <b>entrance</b> is facing <u>N Cornelia Ave</u>.</li></ul>
+<ul class="mapp-list">
+
+<li class="mapp-table">
+<span class="mapp-address">4488 N Cornelia Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">101 102 201 202</td>
+<td class="coord">36.8012383803252, -119.88028687822165</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">103 104 203 204</td>
+<td class="coord">36.80139887030549, -119.88028377349715</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">105 106 205 206</td>
+<td class="coord">36.801404836442295, -119.88006720650985</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.801241973958945, -119.88007363322201</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">109 110 209 210</td>
+<td class="coord">36.801360975436566, -119.87988078583253</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">111 112 211 212</td>
+<td class="coord">36.80117461866187, -119.87989189130651</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">113 114 213 214</td>
+<td class="coord">36.80124037724544, -119.87969399852497</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">115 116 215 216</td>
+<td class="coord">36.801404930848655, -119.87970390825726</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">117 118 217 218</td>
+<td class="coord">36.80125504900212, -119.87948916636667</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">119 120 219 220</td>
+<td class="coord">36.801395971780735, -119.87948622009512</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">121 122 221 222</td>
+<td class="coord">36.80159100992875, -119.87993431559059</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">123 124 223 224</td>
+<td class="coord">36.80159331915931, -119.88013517046376</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">125 126 225 226</td>
+<td class="coord">36.80175520230783, -119.88012443295584</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">127 128 227 228</td>
+<td class="coord">36.80175534843828, -119.87993223869952</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">129 130 229 230</td>
+<td class="coord">36.80172451519807, -119.87971069578596</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">131 132 231 232</td>
+<td class="coord">36.801869374816434, -119.87970765812419</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">133 134 233 234</td>
+<td class="coord">36.80172378989772, -119.87950535096462</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">135 136 235 236</td>
+<td class="coord">36.80188869372133, -119.8795099418807</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">137 138 237 238</td>
+<td class="coord">36.80207744662715, -119.87966801386486</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">139 140 239 240</td>
+<td class="coord">36.80207507401437, -119.87984027488356</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">141 142 241 242</td>
+<td class="coord">36.80223751851145, -119.87966726781437</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">143 144 243 244</td>
+<td class="coord">36.80223184216661, -119.87985544643752</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">146 147 246 247</td>
+<td class="coord">36.80210836595315, -119.88009167304125</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">148 149 248 249</td>
+<td class="coord">36.80195653964923, -119.88008455273787</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">150 151 250 251</td>
+<td class="coord">36.80195306462532, -119.88028820922008</td>
+</tr>
+
+<tr>
+<td class="bldg">4488</td>
+<td class="unit">152 153 252 253</td>
+<td class="coord">36.802113563791465, -119.88028807580447</td>
+</tr>
+
+</tbody>
+</table>
+</li>
+
+<li class="mapp-table">
+<span class="mapp-address">4498 N Cornelia Ave</span>
+
+<table>
+<thead>
+<tr>
+<th class="bldg">bldg #</th>
+<th class="unit">unit #</th>
+<th class="coord">coordinate</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">101 201</td>
+<td class="coord">36.801154113620605, -119.8793533723264</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">102 103 202 203</td>
+<td class="coord">36.80129570207999, -119.87934946496307</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">104 105 204 205</td>
+<td class="coord">36.80129870335656, -119.87915219578964</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">106 206</td>
+<td class="coord">36.80114422171424, -119.87914165680944</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">107 108 207 208</td>
+<td class="coord">36.801359813084346, -119.87895311639404</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">109 110 209 210</td>
+<td class="coord">36.80117842721947, -119.87890150631203</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">112 113 212 213</td>
+<td class="coord">36.80122067702154, -119.87797807072572</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">114 115 214 215</td>
+<td class="coord">36.801345092720496, -119.87812521842127</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">116 117 216 217</td>
+<td class="coord">36.80133228547338, -119.87830257832975</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">118 119 218 219</td>
+<td class="coord">36.80144341108044, -119.87845175712691</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">120 121 220 221</td>
+<td class="coord">36.801545641187744, -119.8784442131205</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">122 123 222 223</td>
+<td class="coord">36.80165153922965, -119.87860898577777</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">125 126 225 226</td>
+<td class="coord">36.80159586872921, -119.87881182794274</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">127 128 227 228</td>
+<td class="coord">36.8017141052586, -119.87867112796502</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">129 130 229 230</td>
+<td class="coord">36.80183602978151, -119.87881306668991</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">131 132 231 232</td>
+<td class="coord">36.80170407880359, -119.8789768690598</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">133 134 233 234</td>
+<td class="coord">36.8015760403493, -119.8791572094166</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">135 136 235 236</td>
+<td class="coord">36.801580474524904, -119.87935313659239</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">137 237</td>
+<td class="coord">36.80177398326072, -119.8790530476537</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">138 139 238 239</td>
+<td class="coord">36.8018848924095, -119.87890859671793</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">140 141 240 241</td>
+<td class="coord">36.80198142815138, -119.87908805286304</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">142 242</td>
+<td class="coord">36.80187416619319, -119.87919637066662</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">143 144 243 244</td>
+<td class="coord">36.80205174882409, -119.87913184798062</td>
+</tr>
+
+<tr>
+<td class="bldg">4498</td>
+<td class="unit">145 146 245 246</td>
+<td class="coord">36.80214742901368, -119.87928729233526</td>
 </tr>
 
 </tbody>
